# nexus

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
nexus/: __init__.py  main.py
nexus/actions/: base.py  quit.py
nexus/model/: tile.py  tilemap.py
nexus/views/: graphics_scene.py  main_window.py  menu_bar.py  status_bar.py
nexus/views/dialogs/: confirm_exit.py
scripts/: build.py
tests/: test_example.py
