[tool.poetry]
name = "nexus"
version = "0.1.0"
description = ""
authors = ["Johan Ronnkvist <johan.ronnkvist@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyside6 = "^6.5.2"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
